# QuranRef

./: .gitignore  Cargo.toml  README.md  build.rs
src/: api.rs  main.rs  models.rs  structs.rs
src/functions/: flag_parser.rs  mod.rs
src/utils/: cli.rs  config.rs  data.rs  download.rs  edit.rs  extras.rs  flag_parser.rs  mod.rs
