[package]
name = "quran-ref"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
confy = "0.5.1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3.14"
tokio = { version = "1", features = ["full"] }
